--- a/cncs-sm2-kit/Cargo.toml
+++ b/cncs-sm2-kit/Cargo.toml
@@ -18,3 +18,4 @@ gmsm = { version = "0.1", default-features = false }
 
 num-bigint = { version = "0.4", default-features = false }
 num-traits = { version = "0.2", default-features = false }
+hex-simd = "0.6.2"
